Write beginning unit tests for student, teacher, and user, include polymorphic associations in corresponding models, and create dropdown selection for user creation in user form.

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -3,13 +3,13 @@
 one:
   email: MyString
   password: MyString
-  person_id_id: 
-  person_id_type: Person
+  person_id: 
+  person_type: Person
   person_type: MyString
 
 two:
   email: MyString
   password: MyString
-  person_id_id: 
-  person_id_type: Person
+  person_id: 
+  person_type: Person
   person_type: MyString
