--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -12,14 +12,20 @@ teacher:
   person_id:
   person_type: "Teacher"
 
-no_email:
-  email:
-  password: "monkey"
-  person_id:
-  person_type: "Teacher"
-
-no_password:
-  email: "geoffrey.s.arnold@gmail.com"
-  password:
-  person_id:
-  person_type: "Teacher"
+# no_email:
+#   email:
+#   password: "monkey"
+#   person_id:
+#   person_type: "Teacher"
+#
+# no_password:
+#   email: "geoffrey.s.arnold@gmail.com"
+#   password:
+#   person_id:
+#   person_type: "Teacher"
+#
+# identical:
+#     email: "geoffrey.s.arnold@gmail.com"
+#     password: "monkey"
+#     person_id:
+#     person_type: "Student"
