Write test for student method to find classmates and write method to pass test.

--- a/test/fixtures/course_registrations.yml
+++ b/test/fixtures/course_registrations.yml
@@ -15,3 +15,7 @@ scott_philosophy:
 scott_psychology:
   student: scott
   course: psychology
+
+michael_philosophy:
+  student: michael
+  course: philosophy
